fixed overlapping issues with pencil marks

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -122,6 +122,7 @@
 	font-size: 13px;
 	font-family: Comic Sans MS, sans-serif;
 	z-index: 3;
+	background-color: rgba(0, 0, 0, 0);
 }
 
 .full_mark {
@@ -135,12 +136,5 @@
 	right: 0;
 	padding-top: 8px;
 	padding-bottom: 8px;
-}
-
-.inactive {
-	color: rgba(0, 0, 0, 0);
-}
-
-.active {
-	color: #666666;
+	background-color: rgba(0, 0, 0, 0);
 }
